--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.13MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-1.96MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-738.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-351.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-452.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.20MB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
+  - {name: 🇯🇵 日本-3.00MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-2.26MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-282.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-396.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
