--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-738.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-351.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.00MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.26MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.08MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇳 中国-282.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-396.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-549.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-761.6KB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-305.7KB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-738.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-282.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-305.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
