--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-622.9KB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-919.3KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
-  - {name: 🇨🇳 中国-809.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-949.3KB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-2.84MB/s(Youtube:不良林), server: 85.208.108.94, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇩🇪 德国-1.95MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇳 中国-428.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-466.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-542.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-426.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-919.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-949.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-428.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-542.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
